contact links spacing fix

--- a/styles-contact.css
+++ b/styles-contact.css
@@ -131,7 +131,7 @@ nav li{
     
 nav a{
 	display:inline-block
-	padding: 10px;
+	padding: 20px;
 	}
 
 a{
